# MpegMeasure2021

./: .gitignore  CMakeLists.txt  MeasureCore.cpp  MeasureCore.h  MeasureSession.cpp  MeasureSession.h  MeasureView.cpp  MeasureView.h  README.md  Recognition.cpp  Recognition.h  main.cpp
binder/: HwManager.cpp  HwManager.h  LinuxSerial.cpp  LinuxSerial.h  SerialInterface.cpp  SerialInterface.h
mmtcp/: MmTcp.cpp  MmTcp.h  MmTcpClassic.cpp  MmTcpClassic.h  MmTcpV2.cpp  MmTcpV2.h  TcpClientSocket.cpp  TcpClientSocket.h  TcpServerSocket.cpp  TcpServerSocket.h
ui/: Fixedsys.c  Fixedsys.h  VgaFont.cpp  VgaFont.h  Widgets.cpp  Widgets.h
utils/: Time.cpp  Time.h
